# Swagger/swaggerapi.go
@@ -2,43 +2,58 @@ package swagger
 
 import model "FirstProject/Model"
 
-// type swaggerAPI struct {
-// 	GetAllUsersResp []model.User
-// }
-
-// // Request containing array
-// // swagger:parameters getAllUsersReq
-// type swaggerGetAllUsersReq struct {
-// 	// in:body
-// 	Body model.User
-// }
-
-// Array with all users
-// swagger:response getAllUsersResp
-type swaggGetAllUsersResp struct {
+// Users requested
+// swagger:model getAllUsersResp
+type GetAllUsersResp struct {
 	// in:body
-	Body struct {
-		// User model
-		Users []model.User `json:"data"`
-	}
+	Users []model.User `json:"users"`
 }
 
-// HTTP status code 400 response
-// swagger:response queryErrResp
-type swaggQueryErrResp struct {
+// User requested
+// swagger:model getUserResp
+type GetUserResp struct {
 	// in:body
-	Body struct {
-		// HTTP status code 400
-		Code int `json:"code"`
-	}
+	User model.User `json:"user"`
+}
+
+// User's JWT updated
+// swagger:model updateUserResp
+type UpdateUserResp struct {
+	// in:body
+	Jwt string `json:"jwt"`
+}
+
+// User's JWT
+// swagger:model loginResp
+type LoginResp struct {
+	// in:body
+	Jwt string `json:"jwt"`
+}
+
+// HTTP status code 200 message response
+// swagger:model genericSuccessResp
+type GenericSuccessResp struct {
+	// in:body
+	Response string `json:"response"`
+}
+
+// HTTP status code 400 response message
+// swagger:model queryErrResp
+type GenericQueryErrResp struct {
+	// in:body
+	Error error `json:"error"`
 }
 
 // HTTP status code 404 response
-// swagger:response notFound
-type swaggNotFound struct {
+// swagger:model notFound
+type GenericNotFound struct {
 	// in:body
-	Body struct {
-		// HTTP status code 400
-		Code int `json:"code"`
-	}
+	Error error `json:"error"`
+}
+
+// HTTP status code 500 response
+// swagger:model internalErr
+type GenericInternalErr struct {
+	// in:body
+	Error error `json:"error"`
 }
